package Strategy;

public interface TravelStrategy {
    void travel(String from, String to);
}
